content description added

--- a/Jarvis/app/src/main/res/values/strings.xml
+++ b/Jarvis/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Jarvis</string>
     <string name="title">Title</string>
+    <string name="add_applet">Add Applet</string>
 </resources>
